--- a/files/styles/style-indoor.css
+++ b/files/styles/style-indoor.css
@@ -207,9 +207,9 @@ QToolButton {
 	font-weight: bold;
 	min-height: 20px;
 	/*min-width: 24px;*/
-	max-height: 20px;
+	/*max-height: 20px;*/
 	border: 0px solid #4A4A4F;
-	border-radius: 2px;
+	border-radius: 10px;
         padding-left: 3px;
     padding-right: 3px;
 	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #59666f, stop: 1 #414B52);
