--- a/src/ui/GSSRobotConfig.ui
+++ b/src/ui/GSSRobotConfig.ui
@@ -20,6 +20,65 @@
    <string>Robot Configuration</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
+   <item row="1" column="3">
+    <spacer name="horizontalSpacer_4">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>41</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="0" column="4" rowspan="2">
+    <widget class="QPushButton" name="pushButton">
+     <property name="minimumSize">
+      <size>
+       <width>200</width>
+       <height>0</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>Store to EEPROM</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="5">
+    <spacer name="horizontalSpacer_3">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>201</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="1" column="1">
+    <spacer name="horizontalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>51</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="0" column="2">
+    <widget class="QLabel" name="label_4">
+     <property name="text">
+      <string>No pending changed</string>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="0" rowspan="2">
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
@@ -46,69 +105,10 @@
      </layout>
     </widget>
    </item>
-   <item row="1" column="1">
-    <spacer name="horizontalSpacer_2">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>51</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="0" column="2">
-    <widget class="QLabel" name="label_4">
-     <property name="text">
-      <string>No pending changed</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="4" rowspan="2">
-    <widget class="QPushButton" name="pushButton">
-     <property name="minimumSize">
-      <size>
-       <width>200</width>
-       <height>0</height>
-      </size>
-     </property>
-     <property name="text">
-      <string>Store to EEPROM</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="3">
-    <spacer name="horizontalSpacer_4">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>41</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="1" column="5">
-    <spacer name="horizontalSpacer_3">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>201</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
    <item row="2" column="0" colspan="6">
-    <widget class="QTabWidget" name="robotGTabWidget">
+    <widget class="QTabWidget" name="RobotControl">
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="motorTab">
       <attribute name="title">
@@ -332,31 +332,193 @@
       <attribute name="title">
        <string>Sensor Calibration</string>
       </attribute>
-      <widget class="QLabel" name="label_6">
+      <widget class="QGraphicsView" name="graphicsView">
        <property name="geometry">
         <rect>
-         <x>70</x>
+         <x>120</x>
          <y>50</y>
-         <width>441</width>
-         <height>261</height>
+         <width>431</width>
+         <height>301</height>
         </rect>
        </property>
-       <property name="text">
-        <string/>
+      </widget>
+     </widget>
+     <widget class="QWidget" name="remoteControlTab">
+      <attribute name="title">
+       <string>Remote Control</string>
+      </attribute>
+      <widget class="QWidget" name="">
+       <property name="geometry">
+        <rect>
+         <x>210</x>
+         <y>10</y>
+         <width>275</width>
+         <height>272</height>
+        </rect>
        </property>
-       <property name="pixmap">
-        <pixmap>../../files/images_icons/gssRobot/G1.PNG</pixmap>
-       </property>
-       <property name="scaledContents">
-        <bool>true</bool>
-       </property>
+       <layout class="QGridLayout" name="gridLayout_3">
+        <item row="0" column="1">
+         <widget class="QToolButton" name="forward_Button">
+          <property name="toolTip">
+           <string>send 'F'</string>
+          </property>
+          <property name="statusTip">
+           <string>send 'F'</string>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../../gss_resources.qrc">
+            <normaloff>:/files/images_icons/Up.png</normaloff>:/files/images_icons/Up.png</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>80</width>
+            <height>80</height>
+           </size>
+          </property>
+          <property name="shortcut">
+           <string>Up</string>
+          </property>
+          <property name="checkable">
+           <bool>false</bool>
+          </property>
+          <property name="checked">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QToolButton" name="left_Button">
+          <property name="toolTip">
+           <string>send 'L'</string>
+          </property>
+          <property name="statusTip">
+           <string>send 'L'</string>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../../gss_resources.qrc">
+            <normaloff>:/files/images_icons/Left.png</normaloff>:/files/images_icons/Left.png</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>80</width>
+            <height>80</height>
+           </size>
+          </property>
+          <property name="shortcut">
+           <string>Left</string>
+          </property>
+          <property name="checkable">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QToolButton" name="stopButton">
+          <property name="toolTip">
+           <string>send 'O'</string>
+          </property>
+          <property name="statusTip">
+           <string>send 'O'</string>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../../gss_resources.qrc">
+            <normaloff>:/files/images_icons/PowerButton_Off.png</normaloff>
+            <normalon>:/files/images_icons/PowerButton_On.png</normalon>:/files/images_icons/PowerButton_Off.png</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>80</width>
+            <height>80</height>
+           </size>
+          </property>
+          <property name="shortcut">
+           <string>Space</string>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+          <property name="checked">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <widget class="QToolButton" name="right_Button">
+          <property name="toolTip">
+           <string>send 'R'</string>
+          </property>
+          <property name="statusTip">
+           <string>send 'R'</string>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../../gss_resources.qrc">
+            <normaloff>:/files/images_icons/Right.png</normaloff>:/files/images_icons/Right.png</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>80</width>
+            <height>80</height>
+           </size>
+          </property>
+          <property name="shortcut">
+           <string>Right</string>
+          </property>
+          <property name="checkable">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QToolButton" name="backward_Button">
+          <property name="toolTip">
+           <string>send 'B'</string>
+          </property>
+          <property name="statusTip">
+           <string>send 'B'</string>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../../gss_resources.qrc">
+            <normaloff>:/files/images_icons/Down.png</normaloff>:/files/images_icons/Down.png</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>80</width>
+            <height>80</height>
+           </size>
+          </property>
+          <property name="shortcut">
+           <string>Down</string>
+          </property>
+          <property name="checkable">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </widget>
      </widget>
     </widget>
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../../gss_resources.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>PspinBox</sender>
